[tool.poetry]
name = "python-pubsub"
version = "0.1.0"
description = ""
authors = ["Sebastian Cheung <sebastian_cheung@yahoo.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
google-cloud-pubsub = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
